--- a/style.css
+++ b/style.css
@@ -1,23 +1,275 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
-  --fontFamily: 'Lato', sans-serif;
-  --fontSize: 16px;
-
-  --color-black: hsl(0, 0%, 0%);
-  --color-lightBlack: hsl(0, 0%, 27%);
-  --color-darkGrey: hsl(0, 0%, 87%);
-  --color-grey: hsl(0, 0%, 93%);
-  --color-white: hsl(0, 0%, 100%);
-
   --color-yellow: hsl(48, 89%, 50%);
   --color-darkOrange: hsl(33, 100%, 50%);
+  
+  --color-white: hsl(0, 0%, 100%);
+  --color-grey: hsl(0, 0%, 93%);
+  --color-darkGrey: hsl(0, 0%, 87%);
+  --color-lightBlack: hsl(0, 0%, 27%);
+  --color-black: hsl(0, 0%, 0%);
 }
 
 html {
-  font-family: var(--fontFamily);
-  font-size: var(--fontSize);
+  font-family: 'Lato', sans-serif;
+  font-size: 16px;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--color-grey);
+}
+
+
+
+#header {
+  position: fixed;
+  top: 0;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+
+  padding: 20px 40px;
+  background-color: var(--color-grey);
+}
+#header-img {
+  height: 100%;
+  max-width: 300px;
+}
+#nav-bar > ul {
+  display: flex;
+  justify-content: flex-end;
+  list-style: none;
+}
+.nav-link {
+  margin-left: 20px;
+}
+
+a {
+  color: var(--color-black);
+  text-decoration: none;
+}
+
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 90px;
+}
+
+
+.title__form {
+  text-align: center;
+}
+#form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+#email {
+  width: 100%;
+  max-width: 275px;
+  padding: 5px;
+  margin-bottom: 15px;
+  border: 1px solid var(--color-darkGrey);
+  border-radius: 2px;
+}
+#submit {
+  width: 100%;
+  max-width: 150px;
+  height: 30px;
+  border: none;
+  background-color: var(--color-yellow);
+  border-radius: 2px;
+
+  font-weight: 900;
+  text-align: center;
+  font-size: 1rem;
+  text-transform: uppercase;
+}
+#submit:hover {
+  background-color: var(--color-darkOrange);
+  transition: background-color 800ms;
+  cursor: pointer;
+}
+
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 800px;
+}
+
+#features {
+  display: flex;
+  flex-direction: column;
+  margin-top: 100px;
+}
+
+.block {
+  display: flex;
+  align-items: center;
+  margin-bottom: 40px;
+  padding: 0 10px;
+}
+.block__icon {
+  width: 64px;
+  height: 64px;
+}
+.svg-inline--fa > path {
+  color: var(--color-darkOrange);
+}
+.block__text {
+  padding-left: 5%;
+}
+/* .text__title {}
+.text__descr {} */
+
+
+#how-it-works {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-top: 40px;
+}
+#video {
+  width: 100%;
+  max-width: 560px;
+}
+
+
+#pricing {
+  display: flex;
+  flex-direction: row;
+  margin-top: 50px;
+  width: 100%;
+}
+
+.product {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: calc(100% / 3);
+  margin: 10px;
+  border-radius: 3px;
+  border: 1px solid var(--color-black);
+}
+.product__title {
+  width: 100%;
+  padding: 15px 0;
+  background-color: var(--color-darkGrey);
+  font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
+}
+.product__price {
+  margin: 12px 0;
+}
+.product__ol {
+  list-style: none;
+}
+.product__list {
+  text-align: center;
+  margin: 6px 0;
+}
+.product__button {
+  height: 40px;
+  padding: 0 20px;
+  margin: 15px 0;
+
+  border: 0;
+  border-radius: 3px;
+  background-color: var(--color-yellow);
+
+  font-size: 1rem;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+.product__button:hover {
+  background-color: var(--color-darkOrange);
+  transition: background-color 800ms;
+  cursor: pointer;
+}
+
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  width: 100%;
+  max-width: 900px;
+  margin-top: 30px;
+  background-color: var(--color-darkGrey);
+  padding: 20px;
+}
+.footer__ul {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  list-style: none;
+}
+.footer__li {
+  padding: 5px 10px;
+}
+.footer__p {
+  color: var(--color-lightBlack);
+}
+
+
+
+@media (max-width: 675px) {
+  #header {
+    flex-direction: column;
+  }
+  #header-img {
+    margin-bottom: 14px;
+  }
+
+  main {
+    margin-top: 120px;
+  }
+  
+  #pricing {
+    flex-direction: column;
+    align-items: center;
+  }
+  .product {
+    width: 230px;
+  }
+}
+
+@media (max-width: 490px) {
+  .block__icon {
+    display: none;
+  }
+  .block__text {
+    text-align: center;
+  }
+}
+
+@media (max-width: 370px) {
+  #nav-bar > ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  #nav-bar > ul li {
+    margin-bottom: 10px;
+  }
+  main {
+    margin-top: 190px;
+  }
 }
